# auto-edit-video

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Loading.json  Makefile  PLAN.md  README.md  a2as.yaml  auto_caption.py  cli.py  correction.py  database.py  edit_video.py  env.sample  flake.nix  gui.py  install.sh  pyproject.toml  ralph.sh  remove_silence.py  requirements.txt  run.sh  start_gui.py  uninstall.sh  web_app.py
.claude/commands/: edit-preview.md  edit-status.md  edit-video.md  fix-stage.md  review-cuts.md
.github/workflows/: ci.yml  release.yml
agent/: .env copy  README.md  agent.py  ollama_agent.py  tools.py
agent/.adk/: session.db
agents/: evaluator.md  matcher.md  metadata.md  overlayer.md  plan_month.md  planner.md  reviewer.md  script_parser.md
assets/overlays/: README.md
auto_edit/: __init__.py  __main__.py  cli.py  config.py  ideas.py  mcp_server.py  overlay_assets.py  pipeline.py  plan.py  runner.py  workspace.py
flutter_app/: .gitignore  README.md  pubspec.yaml
python_core/: README.md  adk_correction.py  api_cli.py  auto_caption.py  build_binary.sh  cli.py
scripts/: auto-edit-launcher.sh
templates/: index.html  login.html
tests/: test_assembler.py  test_block_aligner.py  test_captioner.py  test_clip_analyzer.py  test_executor.py  test_ideas.py  test_pipeline.py  test_pipeline_sequences.py  test_plan.py  test_thumbnailer.py  test_workspace.py
tools/: assembler.py  block_aligner.py  captioner.py  clip_analyzer.py  download_fonts.py  executor.py  extract.py  overlay_smoke_test.py  overlayer.py  thumbnailer.py
(+19 files in other folders)
