[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-edit-video"
version = "0.1.0"
description = "AI-powered video editing CLI (Claude Code or Cursor Agent for planner agents)"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "openai-whisper",
    "pysubs2>=1.6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
auto-edit = "auto_edit.cli:app"

[project.optional-dependencies]
test = ["pytest>=8.0"]
mcp = ["mcp>=1.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["auto_edit"]
